# agent-sentinel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  policy.json  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  release.yml
artifacts/agent_integration/: case_study_results.json
artifacts/autogen_integration/: autogen_results.json
artifacts/baselines/: baseline_suite.csv  baseline_suite.json
artifacts/bench/: policy_engine_bench.json
bench/: run_bench.py
bench/results/: latest.csv  latest.json  trace.jsonl
configs/policies/: default.yaml
configs/tasks/: 01_benign_public_summary.yaml  02_benign_write_report.yaml  03_benign_copy_reference.yaml  04_benign_internal_digest.yaml  05_attack_indirect_prompt_injection.yaml  06_attack_write_outside_workspace.yaml  07_attack_private_read_then_exfil.yaml  08_attack_external_http_post.yaml  demo_injection.yaml  malformed_payload_task.json  plugin_violation_task.json  policy_blocked_task.json  trace_required_task.json
docs/: ARCHITECTURE.md  EVALUATION.md  PLUGIN_API.md  RELEASE.md  bench_report.md
examples/agent_integration/: README.md  run_case_study.py
examples/autogen_integration/: README.md  run_autogen_sentinel.py  tasks.json
paper/: ABSTRACT.md  APPENDIX_DAY11.md  APPENDIX_DAY12.md  APPENDIX_STATS.md  ARTIFACT_AVAILABILITY.md  ATTACK_SCENARIOS.md  CASE_STUDY.md  CLAIMS.md  CONCLUSION.md  DISCUSSION.md  EVAL.md  EVALUATION.md  EVAL_PROTOCOL.md  EXPERIMENTS.md  FIGURES.md  FIG_PIPELINE.txt  FIG_SYSTEM.txt  FIG_THREATMODEL.txt  FORMAL_MODEL.md  FORMAL_PROPERTIES.md  INTRO.md  INTRODUCTION.md  LIMITATIONS.md  METHOD.md  METRICS.md  NICHE.md  NOVELTY.md  PARETO_ANALYSIS.md  PERF_DAYXX.md  PROBLEM.md  README.md  RELATED_WORK.md  REPRODUCIBILITY.md  RESULTS_DAY11.md  RESULTS_DAY12.md  ROBUSTNESS.md  SECURITY_DISCUSSION.md  SECURITY_PROPERTIES.md  STATS_TABLES.md  THREAT_MODEL.md  (+2 more)
paper/sections/: abstract.tex  evaluation.tex  introduction.tex  methodology.tex  results.tex
paper/tables/: STATS_TABLES.md  attack_taxonomy.tex  evaluation_results.tex  results_tables.md  results_tables_day12.md  table_appendix_day11.md  table_asr.md  table_baseline_comparison.csv  table_baseline_comparison.md
private/: secret.txt
public/: briefing.txt  injected_prompt.txt  internal_digest.txt  meeting_notes.txt  reference.txt
scripts/: aggregate_results.py  bench_policy_engine.py  generate_baseline_figures.py  generate_baseline_tables.py  generate_canonical_report.py  generate_figures.py  generate_paper_tables.py  generate_pareto.py  macos_unhide_sitepackages.sh  merge_day12_seeds.py  reproduce_paper_results.sh  run_baseline_suite.py
src/agent_sentinel/: cli.py  cli_exit_codes.py  cli_format.py  errors.py  exit_codes.py  observability.py  policy_schema.py
tests/: conftest.py  test_agent_integration_smoke.py  test_audit_events.py  test_bench_smoke.py  test_benchmark_core.py  test_benchmark_matrix.py  test_benchmark_module_smoke.py  test_benchmark_policy_engine_perf_scenario.py  test_benchmark_report.py  test_benchmark_report_robustness.py  test_benchmark_runner.py  test_canonical_report.py  test_capabilities_registry.py  test_capability_plugins.py  test_capability_registry.py  test_cli_benchmark.py  test_cli_context.py  test_cli_e2e.py  test_cli_errors.py  test_cli_explain.py  test_cli_policy_fuzz.py  test_cli_smoke.py  test_cli_trace.py  test_demo_cli.py  test_gateway_policy.py  test_http_policy.py  test_integration_harness.py  test_ledger.py  test_payload_validation.py  test_policy_engine_decision_result.py  test_policy_engine_edge_cases.py  test_policy_engine_errors.py  test_policy_engine_perf.py  test_policy_monotonicity.py  test_policy_schema.py  test_registry_contracts.py  test_synthetic_tasks.py  test_trace_smoke.py  test_validators.py  test_version_smoke.py
tests/security/: test_policy_attack_scenarios.py  (+1 more)
workspace/: briefing_summary.txt  digest_summary.txt  reference_copy.txt  report.txt
(+267 files in other folders)
