[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sentinel"
version = "0.0.0"
description = "Zero-trust runtime security layer for tool-using AI agents."
authors = [{name="Irshad"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
]
ui = [
    "streamlit>=1.32",
    "pandas>=2.0",
]
ui-watch = ["watchdog"]

[project.scripts]
agent-sentinel = "agent_sentinel.cli:main"
agent-sentinel-benchmark = "agent_sentinel.benchmark.run_benchmark:main"
agent-sentinel-ui = "agent_sentinel.ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_sentinel*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
