[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sentinel"
version = "0.1.5"
description = "Zero-trust runtime security layer for tool-using AI agents."
authors = [{name="Irshad"}]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=4.0",
    "types-requests",
]
ui = [
    "streamlit>=1.32",
    "watchdog>=3.0; platform_system=='Darwin'",
]

[project.scripts]
agent-sentinel-benchmark = "agent_sentinel.benchmark.run_benchmark:main"
agent-sentinel-ui = "agent_sentinel.ui:main"
agent-sentinel = "agent_sentinel.cli:main"

[project.entry-points."agent_sentinel.capabilities"]
# External packages can register capability plugins here, e.g.
# echo = "some_pkg.module:capability_object"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_sentinel*"]

[tool.setuptools.package-data]
agent_sentinel = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "agent_sentinel.capabilities.__init__",
    "agent_sentinel.capabilities.base",
    "agent_sentinel.capabilities.registry",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
